samples/_failures_safe/1761224916_eac49e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efc06e3b.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_efc06e3b.c:157:9: error: expected expression at end of input
  157 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_efc06e3b.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efc06e3b.c:157:9: error: expected declaration or statement at end of input
